# NYCU-master-paper-reproduce

./: .gitignore  README.md  pyproject.toml
analysis/: clustering_selection.py  cnv_landscape_clustering.py  component_mutation.py  dimension_reduction.py  mutation_profile.py  similarity_analysis.py
paper/: paper_20251021.md
src/asc/: cohort_io.py  stats.py
tests/: conftest.py  test_3_1_1_mutation_profile.py  test_3_1_2_cnv_landscape.py  test_3_1_3_clustering.py  test_3_1_4_similarity.py  test_3_1_5_dimreduction.py  test_3_2_1_component_mutation.py
